[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemies/enemies.png" type="Texture" id=1]
[ext_resource path="res://enemies/SpikyBall.gd" type="Script" id=2]
[ext_resource path="res://world/light.png" type="Texture" id=3]
[ext_resource path="res://player/hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://enemies/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/near-miss.ogg" type="AudioStream" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.622517, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 0, 1, 0.757812, 0, 0.42627, 1 )

[sub_resource type="CircleShape2D" id=3]

[node name="SpikyBall" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -15 )
local_coords = false
spread = 180.0
gravity = Vector2( 0, 5 )
initial_velocity = 5.0
scale_amount = 2.0
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -6 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 3 )
texture_scale = 0.2

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 2.0
max_distance = 500.0
bus = "sfx"

[node name="Explosion2" parent="." instance=ExtResource( 5 )]

[node name="Zooming" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
max_distance = 150.0
bus = "sfx"
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
